stupid fucking fuck fvuck logic FUUUUUUCK

--- a/front/app/globals.css
+++ b/front/app/globals.css
@@ -23,6 +23,8 @@
 }
 
 body {
+  overflow: hidden;
+  user-select: none;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
